# emsdk-bug

./: .gitignore  A.cpp  CMakeLists.txt  LICENSE  README.md  cmake_install.cmake  mainModule.cpp  mainModule.h  mainModule.idl  mainModule.js  mainModule.wasm  mainModuleGlu.cpp  mainModuleGlu.js  mainModuleGlue.cpp  mainModuleGlue.js  sideModule.cpp  sideModule.h  sideModule.wasm  sideModule2Glue.js  sideModuleGlue.js  sideModuleTwo.cpp  sideModuleTwo.h  sideModuleTwo.wasm  testA.html  testMS.html
